--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "dependencies": {
     "@mux/mux-node": "^2.6.0",
+    "body-parser": "^1.19.0",
     "express": "~4.11.x",
     "kerberos": "~0.0.x",
     "micro": "^9.3.4",
